# dareeda

./: .gitattributes  .gitignore  LICENSE  dareeda_brand_identity.json  pyproject.toml  qa.config.json
.qa/: README.md  check-tests.ps1  test-audit-summary.csv
.qa/lint/configs/: ruff.toml
.qa/scripts/: run-a11y.sh  run-all.sh  run-e2e.sh  run-integration.sh  run-lint.sh  run-performance.sh  run-security.sh  run-unit.sh
.qa/unit/tests/: conftest.py  test_api_analysis.py  test_api_health.py  test_api_reports.py  test_bivariate_extra.py  test_cleaning_section_contract.py  test_data_loader.py  test_enterprise.py  test_enterprise_builders.py  test_enterprise_extra.py  test_fase1_target.py  test_fase2_quick.py  test_fase3_quick.py  test_file_cache.py  test_insights.py  test_main.py  test_ml_exploratory_extra.py  test_orchestrator.py  (+6 more)
backend/: create_tables.py  main.py  migrate_add_suggested_features.py  requirements.txt  test_fase1_target.py
backend/api/: dependencies.py
backend/core/: config.py  data_loader.py  file_cache.py  models.py  report_generator.py  report_service.py  sampling.py  semantic_typer.py
backend/eda/: orchestrator.py
backend/projects/: dareeda.db
backend/semantics/: base.py  engine.py  keywords.py  registry.py
backend/tests/: test_api_health.py  test_api_reports.py  test_bivariate_extra.py  test_cleaning_section_contract.py  test_data_loader.py  test_enterprise.py  test_enterprise_extra.py  test_fase2_quick.py  test_fase3_quick.py  test_file_cache.py  test_main.py  test_missing_visualizations_full_dataset.py  test_ml_exploratory_extra.py  test_orchestrator.py  test_report_generator_contract.py  test_report_generator_helpers.py  test_sampling.py  test_semantic_typer.py  test_timeseries.py  test_univariate_datetime.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.jsx  App.tsx  index.css  main.jsx  main.tsx
scripts/: run_tests.bat  start_all.bat  start_backend.bat  start_frontend.bat
skills/git/: skill.md
skills/qa/: skill.md
(+127 files in other folders)
