[project]
name = "dareeda"
version = "1.0.0"
description = "Dati puri. Flussi solidi."
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.20",
    "aiofiles>=24.1.0",
    "sqlalchemy>=2.0.0",
    "polars>=1.20.0",
    "pandas>=2.2.0",
    "duckdb>=1.2.0",
    "numpy>=2.0.0",
    "openpyxl>=3.1.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.15.0",
    "statsmodels>=0.14.0",
    "kaleido>=0.2.1",
    "plotly>=6.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "bandit>=1.9.0",
    "pip-audit>=2.10.0",
]

[tool.pytest.ini_options]
testpaths = [".qa/unit/tests", ".qa/integration/tests"]
pythonpath = ["backend", ".qa/unit/tests"]
addopts = "-v --cov=backend --cov-report=term-missing --cov-report=json:.qa/coverage/reports/coverage.json --cov-fail-under=75"

[tool.coverage.run]
omit = [
    "backend/migrate_add_suggested_features.py",
    "backend/test_fase1_target.py",
    "backend/tests/*",
    ".qa/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
fail_under = 95
show_missing = true

[tool.ruff]
line-length = 120
target-version = "py311"
lint.select = ["E", "F", "W", "I", "UP", "B", "SIM"]
exclude = [
    ".venv",
    "__pycache__",
    ".pytest_cache",
    ".pytest_tmp",
    "node_modules",
    "dist",
    "build",
    "artifacts"
]

[tool.ruff.lint.per-file-ignores]
"backend/api/routes/*.py" = ["B008"]
"backend/api/dependencies.py" = ["B008"]
